<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:padding="@dimen/activity_vertical_margin">

            //Email
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_user_name" />

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:gravity="right"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/wasem_white_color"
                    android:textColorHint="@color/wasem_text_color"
                    android:textColor="@color/wasem_text_color" />
            </LinearLayout>

            //Password
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:gravity="right"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:backgroundTint="@color/wasem_white_color"
                    android:textColorHint="@color/wasem_text_color"
                    android:textColor="@color/wasem_text_color" />
            </LinearLayout>

            //Login
            <Button
                android:id="@+id/button_log_in"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_custom"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />

            //Forget Password
            <Button
                android:id="@+id/button_forget_password"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textColor="@color/wasem_text_color"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
